[gd_scene load_steps=4 format=3 uid="uid://fxay7urvju7a"]

[ext_resource type="Texture2D" uid="uid://bc3vmtvaylhvp" path="res://props/GunSprites/bullet.png" id="1_mc0f8"]
[ext_resource type="Script" path="res://scenes/enemies/burger_enemies/big_enemy/enemy_bullet.gd" id="2_kd61v"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ax051"]
radius = 30.0
height = 160.0

[node name="EnemyBullet" type="Area2D"]
scale = Vector2(0.2, 0.2)
script = ExtResource("2_kd61v")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_mc0f8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ax051")
debug_color = Color(0.988525, 0, 0.300998, 0.42)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
